--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -15,4 +15,4 @@ jobs:
             -X POST https://api.github.com/repos/${{ github.repository }}/actions/workflows/6258556/dispatches \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token ${{ secrets.SEC_TOKEN }}" \
-            -d '{"ref": "main", "inputs": {"device": "r2s"}}'
+            -d '{"ref": "main", "inputs": {"device": "r2s", "branch": "master"}}'
