--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -1,7 +1,7 @@
 name: Repo Dispatcher
 on:
-  #schedule:
-    #- cron: '10 10 * * *'
+  schedule:
+    - cron: '10 10 * * *'
   workflow_dispatch:
     #ref: refs/heads/main
 
