--- a/.github/workflows/lo-test.yml
+++ b/.github/workflows/lo-test.yml
@@ -17,7 +17,7 @@ jobs:
 
   build_packages:
     name: Build ${{ github.event.client_payload.device || github.event.inputs.device }} packages
-    runs-on: self-hosted # ubuntu-18.04
+    runs-on: ubuntu-18.04 # self-hosted
     env:
       DEVICE: ${{ github.event.client_payload.device || github.event.inputs.device }}
       BRANCH: ${{ github.event.client_payload.branch || github.event.inputs.branch }}
