--- a/.github/workflows/r2s_lean_minimal.yml
+++ b/.github/workflows/r2s_lean_minimal.yml
@@ -5,8 +5,8 @@ on:
     branches: [ master ]
     paths:
       - '.github/workflows/r2s_lean_minimal.yml'
-  schedule:
-    - cron: '50 14 * * *'
+  #schedule:
+  #  - cron: '50 14 * * *'
   workflow_dispatch:
     ref: refs/heads/master
 
@@ -15,9 +15,6 @@ jobs:
   build:
 
     runs-on: ubuntu-18.04
-    env:
-      TG: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-    if: github.repository == 'biliwala/nanopi-openwrt'
 
     steps:
 
@@ -79,50 +76,3 @@ jobs:
           mkdir package && cp -rf $(find ./friendlywrt-rk3328/ -type f -name "*.ipk") package/ && zip -jr release/R2S-Package-$(date +%Y-%m-%d).zip package/*
           echo "##[set-output name=tag_commitish;]$tag_commitish"
           echo "##[set-output name=release_tag;]$release_tag"
-      # - name: Create Release
-      #   id: create_release
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.sec_token }}
-      #   with:
-      #     tag_name: ${{ steps.assemble_artifact.outputs.release_tag }}
-      #     release_name: 自动发布 ${{ steps.assemble_artifact.outputs.release_tag }}
-      #     draft: false
-      #     prerelease: false
-      # - name: Upload Release Asset
-      #   id: upload-release-asset
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.sec_token }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-      #     asset_path: ./artifact.zip
-      #     asset_name: ${{ steps.assemble_artifact.outputs.release_tag }}-ROM.zip
-      #     asset_content_type: application/zip
-      - name: Upload Release Asset
-        uses: biliwala/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.sec_token }}
-          file: ./release/*
-          tag: ${{ steps.assemble_artifact.outputs.release_tag }}
-          file_glob: true
-          overwrite: true
-          target_commitish: ${{ steps.assemble_artifact.outputs.tag_commitish }}
-          release_name: 自动发布 ${{ steps.assemble_artifact.outputs.release_tag }}
-
-      - name: Debug via tmate
-        uses: P3TERX/ssh2actions@main
-        if: 0 #${{ failure() && env.TG }}
-        env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-
-      - name: Send tg notification
-        if: env.TG
-        #uses: appleboy/telegram-action@master
-        #with:
-        #  to: ${{ secrets.TELEGRAM_CHAT_ID }}
-        #  token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        #  args: The ${{ steps.assemble_artifact.outputs.release_tag }} build ran completed at ${{job.status}}.
-        run: |
-          curl -s -w "%{http_code}\n" -o /dev/null -k --data chat_id="${{secrets.TELEGRAM_CHAT_ID}}" --data "text=The ${{ steps.assemble_artifact.outputs.release_tag }} build ran completed at ${{job.status}}." "https://api.telegram.org/bot${{secrets.TELEGRAM_BOT_TOKEN}}/sendMessage"
